# fast-api

./: .gitignore  CLAUDE.md  CLAUDE_CODE_COMPLETE_GUIDE.md  CLAUDE_SKILLS_AGENTS_HOOKS_GUIDE.md  PROJECT_STRUCTURE.md  README.md  README_JSON_OPTIMIZATION.md  README_LOGGING.md  UV_FASTAPI_GUIDE.md  pyproject.toml  test_direct_logger.py  test_logger.py
.claude/: settings.local.json
.claude/skills/async-mentor/: SKILL.md
.claude/skills/fastapi-reviewer/: SKILL.md  project-context.md
.claude/skills/performance-optimizer/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
app/: config.py  main.py
app/api/: json_comparison.py
app/models/: __init__.py  todo.py
app/observability/: __init__.py  context.py  logger.py  middleware.py  performance.py
app/routers/: todos.py
benchmarks/: benchmark_report.py  benchmark_results.json
docs/: JSON_PERFORMANCE_REPORT.md
examples/: fastapi_optimization.py  performance_comparison.py  serialization_demo.py
fastapi-mastery/: MASTER_PLAN.md  README.md
fastapi-mastery/01-fundamentals/: LEARNING_ROADMAP.md  README.md
fastapi-mastery/01-fundamentals/docs/: 01-async-deep-dive.md
fastapi-mastery/01-fundamentals/examples/: 01_fastapi_async_optimization.py
fastapi-mastery/01-fundamentals/projects/: README.md
fastapi-mastery/01-fundamentals/resources/: README.md
fastapi-mastery/02-architecture/: README.md
fastapi-mastery/claude-skills/: README.md
fastapi-mastery/claude-skills/fastapi-reviewer/: skill.md
fastapi-mastery/templates/: README.md
frontend/src/: index.html
tests/: test_app.py  test_json_performance.py
(+15 files in other folders)
