[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "orjson>=3.10.0",
    "ujson>=5.10.0",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "msgpack>=1.1.2",
    "pydantic>=2.12.4",
    "tabulate>=0.9.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
